--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #e1f1fc;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
